fix navigation z-index stacking issue

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,9 +19,10 @@ Set background-image on inline css
 .hero-cover {
   min-height: 100vh;
   background-image: url(../img/foto-pettine-IfjHaIoAoqE-unsplash-h.jpg);
+  z-index: 1030;
 }
 
-span[class^="hero-overlay-"] {
+span[class^="bg-overlay-"] {
   position: absolute;
   left: 0;
   right: 0;
@@ -31,11 +32,11 @@ span[class^="hero-overlay-"] {
   z-index: 1;
 }
 
-span.hero-overlay-dark {
+span.bg-overlay-dark {
   background-color: black !important;
 }
 
-span.hero-overlay-light {
+span.bg-overlay-light {
   background-color: white !important;
 }
 
